# infotecs

./: .gitignore  README.md  main.py  pyproject.toml
allure-results/: 0dec3c24-28b0-4457-b149-79c18e06ea3f-result.json  0f163854-2857-4d36-be8e-5baa227e3d2f-result.json  11222a63-8a17-49f1-83a5-79c13ec5a771-container.json  11740a87-9b54-4dcc-8d9c-362873dbfba8-container.json  144a5bf9-c470-4f56-a189-5a75991cc225-container.json  17618945-ff51-462a-90ca-910cea4dedfb-container.json  18ef78c0-b165-46c4-bd05-757dc22671a5-container.json  19a6d750-f63b-44bb-9348-84eddc76515e-result.json  1ba8a2c5-ea3c-4323-a60b-d382d6a451aa-container.json  1eee41ce-16d9-4f2a-8554-1c8dee64a663-container.json  22929a6d-5a71-4449-85b3-f2754b75eb63-container.json  283be1c3-2b9e-4607-8a52-5db4a79c85cc-container.json  29fb2c96-4356-4653-8657-2648d8e537cf-container.json  2a1f651e-2158-4921-a42a-289d02626c32-container.json  2a43f974-4baa-472d-925e-9b84f7855a04-container.json  2b5b1fa1-f707-4a81-9924-7a32d1ee9f28-container.json  2d571274-1c84-4770-85a0-5a2e993af7fb-result.json  303fa1a3-2ecc-4b20-bad7-cab5df4463bd-result.json  38313989-142f-4b2d-a37d-e9938db4b745-container.json  3d3fd74b-d353-4c71-a8f0-2a7ef3d12c1f-container.json  3ec4c24c-0d43-48d4-8bae-5a4862298a5a-container.json  4b0786b9-928c-4c30-9b73-48444d761f62-container.json  4d0cbbfc-29a7-45a4-872a-487511490f08-container.json  4f1389b4-32f8-4762-b0f0-d12683bb743d-container.json  4f7e1c28-ebc0-4eaf-bc22-76eede2063e4-container.json  5106a6cf-f20c-4e57-b784-a4b97d510a82-result.json  54f1a056-10e4-49fe-bae4-82fdb824380c-container.json  (+33 more)
(+9 files in other folders)
